[package]
name    = "kubuno-core"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "kubuno-core"
path = "src/main.rs"

[[bin]]
name = "kubuno"
path = "src/bin/kubuno.rs"

[lib]
name = "kubuno_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace       = true
axum.workspace        = true
axum-server.workspace = true
rustls.workspace      = true
tower.workspace       = true
tower-http.workspace  = true
async-trait.workspace = true

sqlx.workspace        = true

serde.workspace       = true
serde_json.workspace  = true

jsonwebtoken.workspace = true
argon2.workspace       = true
aes-gcm.workspace      = true
rand.workspace         = true
sha2.workspace         = true
base64.workspace       = true

reqwest.workspace   = true

config.workspace    = true
dotenvy.workspace   = true

validator.workspace = true

tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true

thiserror.workspace = true
anyhow.workspace    = true

uuid.workspace   = true
chrono.workspace = true
bytes.workspace   = true
futures.workspace = true
tokio-util.workspace = true
yrs.workspace     = true
hex.workspace     = true
toml.workspace    = true
totp-rs.workspace = true
clap.workspace    = true
url.workspace               = true
tokio-tungstenite.workspace = true
kubuno-storage.workspace    = true
kubuno-mcp.workspace        = true
utoipa.workspace            = true
