[package]
name        = "kubuno-seccomp"
version     = "0.1.1"
edition     = "2021"
description = "Auto-sandbox seccomp partagé : interdit l'exécution de processus aux modules qui n'en ont pas besoin"
license     = "AGPL-3.0"

[dependencies]
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
